--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Beautiful Real Estate</title>
+      <title>Dirichi Group</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
       <link rel="stylesheet" href="style.css"/>
@@ -159,10 +159,13 @@
                 alt="About Us Image"
               />
               <p>
-                Beautiful Real Estate is a leading real estate company dedicated
-                to helping you find your dream home. With years of experience in
-                the industry, we pride ourselves on our professionalism, customer
-                service, and expertise.
+                At DIRICHI GROUP, we excel in property management by maximizing property value,
+                optimizing rental income, and building strong tenant relationships.
+                Our expert team delivers exceptional service, focusing on efficiency, risk management, 
+                and compliance to ensure long-term success for property owners and investors.</p>
+
+<p>With a commitment to innovation and industry leadership, we strive to set new standards in property management,
+                providing tailored solutions that drive profitability and growth.
               </p>
             </div>
             <h2>Our Mission</h2>
@@ -172,9 +175,10 @@
                 alt="Our Mission Image"
               />
               <p>
-                Our mission is to provide our clients with the best properties at
-                the best prices while ensuring a smooth and enjoyable buying or
-                selling experience.
+                To be the most trusted and innovative property management company,
+                dedicated to enhancing and preserving property value through exceptional service,
+                optimized rental income, strong tenant relationships, efficient operations,
+                and comprehensive risk management, while ensuring compliance and driving sustained growth and profitability
               </p>
             </div>
             <h2>Clients' Testimonials</h2>
