--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 At DIRICHI GROUP, we excel in property management by maximizing property value,
                 optimizing rental income, and building strong tenant relationships.
                 Our expert team delivers exceptional service, focusing on efficiency, risk management, 
-                and compliance to ensure long-term success for property owners and investors.</p>
+                and compliance to ensure long-term success for property owners and investors.
 
 <p>With a commitment to innovation and industry leadership, we strive to set new standards in property management,
                 providing tailored solutions that drive profitability and growth.
@@ -179,7 +179,7 @@
                 dedicated to enhancing and preserving property value through exceptional service,
                 optimized rental income, strong tenant relationships, efficient operations,
                 and comprehensive risk management, while ensuring compliance and driving sustained growth and profitability
-              </p>
+              </p></p>
             </div>
             <h2>Clients' Testimonials</h2>
   <div class="testimonials">
