--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <div class="container d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>DIRICHI GROUP</span></strong>. All Rights Reserved. <a href="https://pwangroup.com/login">Sign In</a>
+            &copy; Copyright <strong><span>DIRICHI GROUP</span></strong>. All Rights Reserved.
           </div>
         </div>
       </div>
